--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ a:hover{
 
 .sfondo{
     position: relative;
+    padding-top: 100px;
 }
 
 .sfondo:after{
@@ -60,17 +61,19 @@ a:hover{
     font-size: 64px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: rgb(255, 255, 255);
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
 }
 
-h2{
+h2,h3,h4{
     margin: 0%;
     color: black;
-    font-size: 20px;
+    font-size: 40px;
     text-align: left;
+    padding: 16px 0;
+    font-weight: bold;
     
 }
 
@@ -78,51 +81,57 @@ div.flex{
     display: flex;
     max-width: 1000px;
     margin: auto;
+    align-items: center;
+    gap: 64px;
 }
 
-h3{
-    margin: 0%;
-    color: black;
-    font-size: 20px;
-    text-align: left;
+div.flex img{
+    height: 400px;
+    object-fit: cover;
+    width: 100%;
 }
 
-h4{
-    margin: 0%;
-    color: black;
-    font-size: 20px;
-    text-align: left;
-}
-
-
-p{
+.testo{
+    width: 50%;
+    padding: 130px 50px;
+    border: 3px solid rgb(0, 0, 0);
     text-align: right;
-    
 }
 
-.copertinafigma{
-    position: relative;
-    margin: 0%;
+.immagine{
+    width: 40%;
 }
-
-.retrofigma{
-    position: relative;
-}
-.finetesto{
-    position:absolute;
-    bottom: 50%;
-    right: 50%;
-    text-align: right;
-    font-size: 16px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
-}
-
 
 footer{
     display: flex;
     text-align: right;
 }
+.sfondofooter img{
+    object-fit: cover;
+    height: 100%;
+}
+
+.sfondofooter{
+    position: relative;
+}
+
+.sfondofooter:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.finetesto{
+    position:absolute;
+    bottom: 16px;
+    right: 32px;
+    text-align: right;
+    font-size: 16px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    z-index: 1;
+    color: aliceblue;
+}
+
 section{
     padding: 42px;
 }
